manifests/clixx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clixx-web-deployment
  namespace: clixx-prod
  labels:
    app: clixx-web-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: clixx-web-app
  template:
    metadata:
      labels:
        app: clixx-web-app
    spec:
      imagePullSecrets:
        - name: ecr-registry-key
      containers:
        - name: clixx-web-app
          image: 111111111111.dkr.ecr.us-east-1.amazonaws.com/clixx-repository:clixx-image-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-config-storage
              mountPath: /var/www/html/wp-config.php   # exact file path in container
              subPath: wp-config.php                    # exact file path inside the volume
      volumes:
        - name: wp-config-storage
          persistentVolumeClaim:
            claimName: clixx-config-claim
        - name: wp-config-template
          configMap:
            name: wp-config-template
