manifests/clixx-lb-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: clixx-service
  labels:
    app: clixx-web-app
    new_serv: CLIXX
spec:
  type: NodePort
  selector:
    app: clixx-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30000
